@startuml
skinparam monochrome true
skinparam shadowing false
skinparam classAttributeIconSize 0

package "modelo" {
  class Usuario {
    - id: int
    - alias: String
    - password: String
  }
  class Grupo {
    - id: int
    - nombre: String
    - clave: String
    - puerto: int
  }
  class Mensaje {
    - id: int
    - contenido: String
    - fecha: LocalDateTime
    - grupoId: int
    - usuarioId: int
    + getAliasUsuario(): String
  }
}

package "persistencia" {
  class UsuarioDAO
  class GrupoDAO
  class MensajeDAO
  class ConexionBD
}

package "servidor" {
  class ServidorGrupo
  class ManejadorCliente
  class ServicioChat
  class ChatObservable
  interface ChatObserver
}

package "cliente" {
  class Cliente
  class ClienteApp
}

package "controller" {
  class LoginController
  class ChatController
}

package "gui" {
  class GroupChat
  interface MessageObserver
}

Usuario "1" -- "0..*" Mensaje : envía
Grupo "1" -- "0..*" Mensaje : contiene
Mensaje "1" --> "1" Usuario : autor
Mensaje "1" --> "1" Grupo : pertenece

ServicioChat o-- ChatObservable
ChatObservable o-- "*" ChatObserver
ManejadorCliente ..|> ChatObserver

MessageListener ..|> MessageObserver
GroupChat ..|> MessageObserver

@enduml